--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,8 +45,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=19
+javac.target=19
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -71,7 +71,7 @@ jlink.launcher.name=Utils
 main.class=com.ounis.utils.fTest
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=default_platform
+platform.active=JDK_19
 project.FTools=../FTools
 reference.FTools.jar=${project.FTools}/dist/FTools.jar
 run.classpath=\
